[project]
name = "pdf-processor"
version = "0.1.0"
description = "PDF to Markdown converter using opendataloader-pdf with GPU acceleration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opendataloader-pdf",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "streamlit>=1.30.0",
]
